--- a/result/2021-12-20.md
+++ b/result/2021-12-20.md
@@ -51,3 +51,4 @@
 51. [大四女生用流利英语介绍彝族漆器](https://s.weibo.com//weibo?q=%23%E5%A4%A7%E5%9B%9B%E5%A5%B3%E7%94%9F%E7%94%A8%E6%B5%81%E5%88%A9%E8%8B%B1%E8%AF%AD%E4%BB%8B%E7%BB%8D%E5%BD%9D%E6%97%8F%E6%BC%86%E5%99%A8%23&Refer=top) 115300
 52. [女子碰瓷数十次不给钱就掰雨刮器](https://s.weibo.com//weibo?q=%23%E5%A5%B3%E5%AD%90%E7%A2%B0%E7%93%B7%E6%95%B0%E5%8D%81%E6%AC%A1%E4%B8%8D%E7%BB%99%E9%92%B1%E5%B0%B1%E6%8E%B0%E9%9B%A8%E5%88%AE%E5%99%A8%23&Refer=top) 109434
 53. [风格大赏红毯](https://s.weibo.com//weibo?q=%23%E9%A3%8E%E6%A0%BC%E5%A4%A7%E8%B5%8F%E7%BA%A2%E6%AF%AF%23&Refer=top) 104168
+54. [凡晨组合世锦赛2比0夺冠](https://s.weibo.com//weibo?q=%23%E5%87%A1%E6%99%A8%E7%BB%84%E5%90%88%E4%B8%96%E9%94%A6%E8%B5%9B2%E6%AF%940%E5%A4%BA%E5%86%A0%23&Refer=top) 52264
